<resources>
    <string name="app_name">CaminoAlba</string>

    <string name="spinner_message">User Type</string>

    <string-array name="type">
        <item>user</item>
        <item>admin</item>
    </string-array>

    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_profile">Profile</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">SETTINGS</string>
    <string name="confirm_exit">Are you sure you want to exit ?</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_news">News</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_map">Map</string>
    <string name="menu_socio">Partnership</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_log_out">Log out</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="hello_blank_fragment">WELCOME TO YOUR PROFILE INFORMATION</string>
    <string name="map">MAP</string>

    <string name="text_sign_up">sign up</string>
    <!--    Logic messages-->
    <string name="select_gender">Select Gender</string>
    <string name="tvSingUp">Sing up</string>
    <string name="text_dont_have_account">"Don't you have an account ?. Sing up here "</string>
    <string name="text_sing_in">Sing in</string>
    <string name="text_already_have_account">Already have an account ?. Sing in here.</string>
    <string name="birthday">Birthdate</string>
    <string name="Gender">Gender</string>
    <string name="Submit">Submit</string>
    <string name="Name">Name</string>
    <string name="publication">Publication</string>
    <string name="news">News</string>
    <string name="setUpLocation">Please go to the map section to set your current location.</string>
    <string name="newsInformation">Here you can see the lates news about Camino del Alba.</string>
    <string name="ownPhotosMessage">Here you can see your publications that you have, you can edit them but you cannot remove them.</string>
    <string name="beSureToBeLess200mt">Make sure to be less than 200 meters in one placemark in order to see the publications for the placemark.</string>
    <string name="welcome">Welcome</string>
    <string name="tvSingIn">Sing In</string>
    <string name="admin_news">Welcome admin you can add, edit and remove news</string>
    <string name="btnPathInformation">Path Information</string>
    <string name="partnershipInfo">If you want to add a new badge first make sure to set up your location and be less than 200mts and then scan the QR code.</string>
    <string name="partnership">Badge</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="settings">Settings</string>
    <string name="resetPassword">Reset Password</string>
    <string name="oldPassword">Enter old password</string>
    <string name="newPassword">Enter your new password</string>
    <string name="pathnameInfo" />
    <string name="titleToolbar">ASSIGN A NEW BADGE</string>
    <string name="confirmPath">Confirm Path</string>
    <string name="pathName">"Current path : "</string>
    <string name="emailVerification">Please verify your email</string>
    <string name="changePassword">Change Password</string>
    <string name="selectLanguage">Select Language</string>
    <string name="confirmationPartnership">Here you can confirm with a badge that the user has arrived a new point of El camino del Alba, you just need to scaner his QR code and the assignation will be made automatically.</string>
    <string name="others">Others</string>
    <string name="edit_publication">Edit Publication</string>
    <string name="emailVerified">Email has been verified successfully</string>
    <string name="emailNotVerified">Email hasn\'t been verified, click here to verify it</string>
    <string name="publications">Publications</string>
    <string name="profile">PROFILE</string>
    <string name="pathInformation">Path Information</string>
    <string name="btnBadge">Badge</string>
    <string name="noBadgesFound">If you want to unlock a path you need first to badge it.</string>
    <string name="ownPhotosMessageForAdmin">Here you can see your publications that you have, you can edit and remove them as admin.</string>
    <string name="full_name">fullname</string>
    <string name="newPasswordConfirm">Confirm your new password</string>
    <string name="password_updated_successfully">Please enter your old password</string>
    <string name="password_updated_unsuccessfully">"Error updating password: "</string>
    <string name="password_dont_match">New password and confirm password do not match</string>
    <string name="password_lenght">New password should be at least 6 characters long</string>
    <string name="incorrect_password">Incorrect old password</string>
    <string name="publication_deleted_successfully">Publication deleted successfully</string>
    <string name="publication_deletec_unsuccessfully">"Error deleting publication "</string>
    <string name="confirmation_question_delete_publication">Are you sure you want to delete this publication?</string>
    <string name="verification_sent">Verification email sent. Please check your inbox.</string>
    <string name="failed_sending_verification">Failed to send verification email:</string>
    <string name="profile_updated_successfully">Profile information updated sucessfully</string>
    <string name="photo_upload_sucessfully">Photo updated sucessfully</string>
    <string name="user_registered">" You've been registered."</string>
    <string name="profile_not_found">Profile not found for this user.</string>
    <string name="error_uploading_data">"Error loading user data: "</string>
    <string name="auth_failed">"Authentication failed: "</string>
    <string name="user_not_found">Profile not found for this user.</string>
    <string name="password_reset_send">Password reset email sent to</string>
    <string name="error_password_reset_send">Failed to send password reset email:</string>
    <string name="enter_email_address">Please enter your email address.</string>
    <string name="password_must_be_6_long">\"Password must be at least 6 characters long\"</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="wanna_give_a_badge">Are you sure you want to give this profile a badge for this path?</string>
    <string name="confirmation">Confirmation</string>
    <string name="user_already_has_this_path">The user already has a badge with this path</string>
    <string name="profile_updated_unsuccessfully">"Failed to update profile: "</string>
    <string name="user_needs_to_be_in_a_placemark">The user needs to be in a placemark in order to assign the user the badge</string>
    <string name="qr_dont_belong_here">This QR does not belong to this path</string>
    <string name="camera_permisson_no_granted">Camera permission not granted</string>
    <string name="database_error">Database error</string>
    <string name="error_current_path_null">"Error current path null "</string>
    <string name="badge_added_successfully">Badge added successfully</string>
    <string name="photo_already_added">Photo already added</string>
    <string name="maximum_number_photos_reached">Maximum number of photos reached</string>
    <string name="select_picture">Select Picture</string>
    <string name="invalid_storage_uri">Invalid storage Uri</string>
    <string name="error_publication_doesnt_exists">Error: publication does not exist in the database</string>
    <string name="please_select_one_photo">Please select at least one photo</string>
    <string name="publication_updated_successfully">Publication updated successfully</string>
    <string name="publication_created_successfully">Publication created successfully</string>
    <string name="back_home">Back Home</string>
    <string name="user_not_registered">User couldn\'t be registered.</string>
    <string name="email_already_registered">Email is already registered.</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password">Password</string>

    <string-array name="languages_array">
        <item>Select Language</item>
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


</resources>