<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_settings"
    android:background="@color/my_dark_blue"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/my_light_blue"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
  />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@color/tropical_blue"
        android:textSize="18sp"
        android:padding="16dp" />

    <TextView
        android:id="@+id/userNameEditText"
        android:textColor="@color/my_dark_grey"
        android:textColorHint="@color/my_dark_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your user name"
        android:padding="16dp" />

    <TextView
        android:id="@+id/userEmailTextView"
        android:textColor="@color/tropical_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:padding="16dp" />

    <TextView
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your email address"
        android:textColor="@color/my_dark_grey"
        android:textColorHint="@color/my_dark_grey"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tropical_blue"
        android:textColorHint="@color/my_dark_grey"
        android:text="Password"
        android:textSize="18sp"
        android:padding="16dp" />

    <EditText
        android:id="@+id/oldPasswordEditText"
        android:background="@drawable/input_text_field_styling"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content"
        android:hint="@string/oldPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/my_dark_grey"
        android:inputType="textPassword"
        android:padding="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newPassword"
        android:background="@drawable/input_text_field_styling"
        android:textColor="@color/black"
        android:textColorHint="@color/my_dark_grey"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:padding="16dp" />

    <EditText
        android:id="@+id/passwordEditTextConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newPasswordConfirm"
        android:background="@drawable/input_text_field_styling"
        android:textColor="@color/black"
        android:textColorHint="@color/my_dark_grey"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:padding="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/main_btn_styling"
        android:id="@+id/changePasswordButton"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changePassword"
        android:textSize="16sp"
        android:padding="16dp" />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tropical_blue"
        android:text="@string/selectLanguage"
        android:textSize="18sp"
        android:padding="16dp" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/my_dark_grey"
        android:textColorHint="@color/my_dark_grey"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>
