<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@id/newsFragment">
<!--    android:label="fragment_news"-->
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.caminoalba.ui.menuItems.FragmentNews"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/blogFragment"
        android:name="com.example.caminoalba.ui.menuItems.publication.FragmentPublication"
        tools:layout="@layout/fragment_blog" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.caminoalba.ui.menuItems.profile.FragmentProfile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/logOutFragment"
        android:name="com.example.caminoalba.ui.menuItems.FragmentLogOut"
        tools:layout="@layout/fragment_log_out" />
    <fragment
        android:id="@+id/fragmentConfirmationPartnership"
        android:name="com.example.caminoalba.FragmentConfirmationPartnership"
        tools:layout="@layout/fragment_confirmation_partnership" />

    <fragment
        android:id="@+id/fragment_partner"
        android:label="@string/pathInformation"
        android:name="com.example.caminoalba.ui.menuItems.partner.FragmentPartner"
        tools:layout="@layout/fragment_partner" />

    <fragment
        android:id="@+id/fragment_settings"
        android:label="@string/settings"
        android:name="com.example.caminoalba.ui.menuItems.FragmentSettings"
        tools:layout="@layout/fragment_confirmation_partnership" />




</navigation>