<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/child_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_dark_blue"
    tools:context=".ui.menuItems.profile.FragmentProfile">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        >

        <!-- Name -->
        <LinearLayout
            android:id="@+id/linearlayout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:scaleType="centerCrop"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/default_image" />

        </LinearLayout>


        <!-- Last Name -->

        <TextView
            android:id="@+id/tvFirstName"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textColor="@color/my_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearlayout_image"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/Name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edFirstName"
            android:fontFamily="@font/lato"
            android:textSize="14sp"
            android:padding="16dp"
            android:textColorHint="@color/my_dark_grey"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text_field_styling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFirstName"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:minHeight="40dp"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/tvLastName"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textColor="@color/my_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edFirstName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/lastName"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edLastName"
            android:fontFamily="@font/lato"
            android:padding="16dp"
            android:textSize="14sp"
            android:textColorHint="@color/my_dark_grey"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text_field_styling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLastName"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:minHeight="40dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <!-- Birthdate -->
        <TextView
            android:id="@+id/tvBirthDate"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textColor="@color/my_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edLastName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/birthday"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edBirthDate"
            android:fontFamily="@font/lato"
            android:padding="16dp"
            android:textSize="14sp"
            android:textColorHint="@color/my_dark_grey"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text_field_styling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBirthDate"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:minHeight="40dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <!-- Gender -->
        <TextView
            android:id="@+id/tvGender"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textColor="@color/my_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edBirthDate"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Gender"
            android:textSize="15sp" />

        <!-- Gender -->

        <Spinner
            android:id="@+id/spinnerGender"
            android:textSize="14sp"
            android:fontFamily="@font/lato"
            android:prompt="@string/select_gender"
            android:entries="@array/gender_array"
            android:padding="16dp"
            android:textColorHint="@color/my_dark_grey"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@drawable/first_gradient"
            android:paddingEnd="40dp"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGender"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:minHeight="40dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/tvEmailVerified"
            android:fontFamily="@font/sans"
            android:textStyle="bold"
            android:textColor="@color/my_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerGender"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/emailVerification"
            android:textSize="13sp" />

        <!-- Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveInformation"
            android:textSize="11sp"
            android:textStyle="bold"
            android:background="@drawable/main_btn_styling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmailVerified"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/Submit" />

    </RelativeLayout>
</FrameLayout>
